--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,218 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
+
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header_block">
+                <a class="header_logo" href="#">
+                    <img src="./img/res_01.svg" alt="img">
+                </a>
+                <nav>
+                    <ul class="header_list">
+                        <li class="header_item">
+                            <a class="header_link" href="#">HOME</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link" href="./about_us.html">ABOUT US</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link" href="#">Create your plan</a>
+                        </li>
+                    </ul>
+                    <button class="header_btn"></button>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero_block">
+                    <h1 class="hero_title">Great coffee
+                        made simple.</h1>
+                    <p class="hero_text">Start your mornings with the world’s best coffees. Try our expertly curated
+                        artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <button class="hero_btn">Create your plan</button>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about_block">
+                    <div class="imgs">
+                    </div>
+                    <ul class="about_list">
+                        <li class="about_item">
+                            <div class="imgss">
+                                <img class="about_img" src="./img/about_inner_tablet.png" alt="img">
+                            </div>
+                            <div class="about_content">
+                                <h3 class="about_title">Gran Espresso</h3>
+                                <p class="about_text">Light and flavorful blend with cocoa and black pepper for an
+                                    intense experience</p>
+                            </div>
+                        </li>
+                        <li class="about_item">
+                            <div class="imgss">
+                                <img class="about_img" src="./img/about_inner_tablet.png" alt="img">
+                            </div>
+                            <div class="about_content">
+                                <h3 class="about_title">Planalto</h3>
+                                <p class="about_text">Brazilian dark roast with rich and velvety body, and hints of
+                                    fruits and nuts</p>
+                            </div>
+                        </li>
+                        <li class="about_item">
+                            <div class="imgss">
+                                <img class="about_img" src="./img/about_inner_tablet.png" alt="img">
+                            </div>
+                            <div class="about_content">
+                                <h3 class="about_title">Piccollo</h3>
+                                <p class="about_text">Mild and smooth blend featuring notes of toasted almond and dried
+                                    cherry </p>
+                            </div>
+                        </li>
+                        <li class="about_item">
+                            <div class="imgss">
+                                <img class="about_img" src="./img/about_inner_tablet.png" alt="img">
+                            </div>
+                            <div class="about_content">
+                                <h3 class="about_title">Danche</h3>
+                                <p class="about_text">Ethiopian hand-harvested blend densely packed with vibrant fruit
+                                    notes</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="choose">
+            <div class="container choose__container">
+                <div class="choose__block">
+                    <h2 class="choose__title">Why choose us?</h2>
+                    <p class="choose__text">
+                        A large part of our role is choosing which particular coffees will
+                        be featured in our range. This means working closely with the best
+                        coffee growers to give you a more impactful experience on every
+                        level.
+                    </p>
+                </div>
+                <ul class="choose__list">
+                    <li class="choose__item">
+                        <div class="choose__wrapper">
+                            <h3 class="choose__sub_title">Best quality</h3>
+                            <p class="choose__des">
+                                Discover an endless variety of the world’s best artisan coffee
+                                from each of our roasters.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="choose__item">
+                        <div class="choose__wrapper">
+                            <h3 class="choose__sub_title">Best quality</h3>
+                            <p class="choose__des">
+                                Discover an endless variety of the world’s best artisan coffee
+                                from each of our roasters.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="choose__item">
+                        <div class="choose__wrapper">
+                            <h3 class="choose__sub_title">Best quality</h3>
+                            <p class="choose__des">
+                                Discover an endless variety of the world’s best artisan coffee
+                                from each of our roasters.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="works">
+            <div class="container">
+                <div class="works_block">
+                    <div class="works_coment">
+                        <h3 class="works_title">How it works</h3>
+                    </div>
+                    <div class="wrapper">
+                        <div class="box">
+                            <div class="item item1"></div>
+                            <div class="item item2"></div>
+                            <div class="item item3"></div>
+                        </div>
+                    </div>
+                    <ul class="works_list">
+                        <li class="works_item">
+                            <div class="works_img">
+                                <img src="./img/works_mobil.svg" alt="img">
+                            </div>
+                            <h3 class="works_in_title">Pick your coffee</h3>
+                            <p class="works_in_text">Select from our evolving range of artisan coffees. Our beans are
+                                ethically sourced and we pay fair prices for them. There are new coffees in all profiles
+                                every month for you to try out.</p>
+                        </li>
+                        <li class="works_item">
+                            <div class="works_img">
+                                <img src="./img/works_mobil.svg" alt="img">
+                            </div>
+                            <h3 class="works_in_title">Pick your coffee</h3>
+                            <p class="works_in_text">Select from our evolving range of artisan coffees. Our beans are
+                                ethically sourced and we pay fair prices for them. There are new coffees in all profiles
+                                every month for you to try out.</p>
+                        </li>
+                        <li class="works_item">
+                            <div class="works_img">
+                                <img src="./img/works_mobil.svg" alt="img">
+                            </div>
+                            <h3 class="works_in_title">Pick your coffee</h3>
+                            <p class="works_in_text">Select from our evolving range of artisan coffees. Our beans are
+                                ethically sourced and we pay fair prices for them. There are new coffees in all profiles
+                                every month for you to try out.</p>
+                        </li>
+                    </ul>
+                    <button class="works_btn">Create your plan</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_block">
+                <div class="footer_com">
+                    <div class="footer_coment">
+                        <img src="./img/footer_mobil.svg" alt="img">
+                    </div>
+                    <ul class="footer_list">
+                        <!-- <li class="footer_item_1">
+                            <ul class="fo_list"> -->
+                                <li class="fo_item">
+                                    <a class="footer_link" href="#">HOME</a>
+                                </li>
+                                <li class="fo_item">
+                                    <a class="footer_link" href="#">ABOUT US</a>
+                                </li>
+                                <li class="fo_item">
+                                    <a class="footer_link" href="#">Create your plan</a>
+                                </li>
+                            <!-- </ul>
+                        </li> -->
+                        <!-- <li class="footer_item_2"> -->
     
+                        <!-- </li> -->
+                    </ul>
+                </div>
+                <ul class="fot_list">
+                    <li class="fot_item">
+                        <a href="#">
+                            <img src="./img/footer_mobile_1.svg" alt="img">
+                        </a>
+                    </li>                   
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
